# syslog_client

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: lib.rs  log04.rs  tracing.rs
src/syslog/: header.rs  mod.rs
src/writer/: mod.rs  std.rs
tests/: std.rs  syslog.rs  tracing.rs
