[package]
name = "syslog_client"
version = "1.0.0"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Syslog logging client"
readme = "README.md"
repository = "https://github.com/DoumanAsh/syslog_client"
license = "BSL-1.0"
keywords = ["syslog", "logger", "tracing"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
time-c = "1.0.0-alpha.2"
str-buf = "4.0.0-beta.1"

[dependencies.os-id]
version = "3.1.0"
default-features = false
features = ["process"]

[[test]]
name = "std"
required-features = ["std"]

[features]
std = []
