[package]
name = "syslog_client"
version = "1.0.0-beta.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Syslog client"
readme = "README.md"
repository = "https://github.com/DoumanAsh/syslog_client"
license = "BSL-1.0"
keywords = ["syslog", "logger", "log", "rfc3164"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
time-c = "1.0.0-alpha.2"
str-buf = "4.0.0-beta.1"

[dependencies.os-id]
version = "3.1.0"
default-features = false
features = ["process"]

[dependencies.log04]
package = "log"
version = "0.4.18"
default-features = false
optional = true

[dev-dependencies.log04]
package = "log"
version = "0.4"
default-features = false
features = ["kv"]

[[test]]
name = "std"
required-features = ["std"]

[features]
std = []
log04 = ["dep:log04"]

[package.metadata.docs.rs]
features = ["std", "log04"]
