[package]
name = "syslog_client"
version = "1.0.0-beta.4"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"
description = "Syslog client"
readme = "README.md"
repository = "https://github.com/DoumanAsh/syslog_client"
license = "BSL-1.0"
keywords = ["syslog", "logger", "log", "rfc3164"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
time-c = "1.0.0-alpha.2"
str-buf = "4.0.0-beta.1"

[dependencies.os-id]
version = "3.1.0"
default-features = false
features = ["process"]

[dependencies.log04]
package = "log"
version = "0.4.18"
default-features = false
optional = true

[dependencies.tracing]
version = "0.1"
default-features = false
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
default-features = false
optional = true

[dev-dependencies.log04]
package = "log"
version = "0.4"
default-features = false
features = ["kv"]

[dev-dependencies.tracing]
version = "0.1"
default-features = false
features = ["attributes"]

[dev-dependencies.tracing-subscriber]
version = "0.3"
default-features = false
features = ["std", "registry"]

[[test]]
name = "std"
required-features = ["std"]

[[test]]
name = "tracing"
required-features = ["tracing"]

[features]
std = ["tracing-subscriber/std"]
log04 = ["dep:log04"]
tracing = ["dep:tracing", "tracing-subscriber"]
# Enables recording of spans
tracing-full = ["tracing", "std"]

[package.metadata.docs.rs]
features = ["std", "log04", "tracing-full"]
